Fix Dark Mode Bugs

--- a/css/themes.css
+++ b/css/themes.css
@@ -104,6 +104,14 @@
   color: white;
 }
 
+.dark .dropdown-content {
+  background-color: #1c1c1c;
+}
+
+.dark .dropdown-content:hover {
+  background-color: #292929; 
+}
+
 
 
 /* Your Custom Theme can go here if you don't want to modify the existing dark mode */
